--- a/deploy/reverse-proxy/nginx.conf
+++ b/deploy/reverse-proxy/nginx.conf
@@ -78,13 +78,13 @@ http {
             return 200 "ok";
         }
 
-        # Redirect all other traffic to HTTPS (uncomment after SSL setup)
-        # location / {
-        #     return 301 https://$host$request_uri;
-        # }
-
-        # Temporary: serve normally until SSL is configured
+        # Redirect all other traffic to HTTPS
         location / {
+            return 301 https://$host$request_uri;
+        }
+
+        # Temporary: serve normally until SSL is configured (DISABLED - SSL enabled)
+        location /disabled_http_fallback {
             limit_req zone=general_limit burst=50 nodelay;
             limit_conn conn_limit 10;
 
@@ -106,30 +106,48 @@ http {
             proxy_connect_timeout 15s;
         }
 
+        # API and media endpoints disabled on HTTP (now require HTTPS)
+    }
+
+    # HTTPS server
+    server {
+        listen 443 ssl http2;
+        server_name _;
+
+        ssl_certificate /etc/letsencrypt/live/meisterbarbershop.de/fullchain.pem;
+        ssl_certificate_key /etc/letsencrypt/live/meisterbarbershop.de/privkey.pem;
+        ssl_protocols TLSv1.2 TLSv1.3;
+        ssl_ciphers HIGH:!aNULL:!MD5;
+        ssl_prefer_server_ciphers on;
+        ssl_session_cache shared:SSL:10m;
+        ssl_session_timeout 10m;
+
+        # Security headers
+        add_header Strict-Transport-Security "max-age=31536000; includeSubDomains" always;
+        add_header X-Content-Type-Options "nosniff" always;
+        add_header X-Frame-Options "SAMEORIGIN" always;
+        add_header X-XSS-Protection "1; mode=block" always;
+        add_header Referrer-Policy "strict-origin-when-cross-origin" always;
+
+        location /healthz {
+            access_log off;
+            add_header Content-Type text/plain;
+            return 200 "ok";
+        }
+
         location /api/ {
             limit_req zone=api_limit burst=20 nodelay;
-
-            add_header X-Content-Type-Options "nosniff" always;
-            add_header X-Frame-Options "SAMEORIGIN" always;
-
             proxy_pass http://backend_service;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto $scheme;
-            proxy_set_header X-Forwarded-Host $host;
-            proxy_set_header X-Forwarded-Port $server_port;
             proxy_redirect off;
-            proxy_read_timeout 60s;
-            proxy_connect_timeout 15s;
         }
 
         location /media/ {
             limit_req zone=general_limit burst=30;
-
-            add_header X-Content-Type-Options "nosniff" always;
             add_header Cache-Control "public, max-age=31536000, immutable";
-
             proxy_pass http://backend_service;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
@@ -140,59 +158,14 @@ http {
             proxy_cache_valid 200 60m;
             proxy_cache_bypass $http_pragma $http_authorization;
         }
-    }
 
-    # HTTPS server (uncomment after SSL setup)
-    # server {
-    #     listen 443 ssl http2;
-    #     server_name _;
-    #
-    #     ssl_certificate /etc/letsencrypt/live/yourdomain.com/fullchain.pem;
-    #     ssl_certificate_key /etc/letsencrypt/live/yourdomain.com/privkey.pem;
-    #     ssl_protocols TLSv1.2 TLSv1.3;
-    #     ssl_ciphers HIGH:!aNULL:!MD5;
-    #     ssl_prefer_server_ciphers on;
-    #     ssl_session_cache shared:SSL:10m;
-    #     ssl_session_timeout 10m;
-    #
-    #     # Security headers
-    #     add_header Strict-Transport-Security "max-age=31536000; includeSubDomains" always;
-    #     add_header X-Content-Type-Options "nosniff" always;
-    #     add_header X-Frame-Options "SAMEORIGIN" always;
-    #     add_header X-XSS-Protection "1; mode=block" always;
-    #     add_header Referrer-Policy "strict-origin-when-cross-origin" always;
-    #
-    #     location /healthz {
-    #         access_log off;
-    #         add_header Content-Type text/plain;
-    #         return 200 "ok";
-    #     }
-    #
-    #     location /api/ {
-    #         limit_req zone=api_limit burst=20 nodelay;
-    #         proxy_pass http://backend_service;
-    #         proxy_set_header Host $host;
-    #         proxy_set_header X-Real-IP $remote_addr;
-    #         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-    #         proxy_set_header X-Forwarded-Proto $scheme;
-    #         proxy_redirect off;
-    #     }
-    #
-    #     location /media/ {
-    #         limit_req zone=general_limit burst=30;
-    #         add_header Cache-Control "public, max-age=31536000, immutable";
-    #         proxy_pass http://backend_service;
-    #         proxy_cache static_cache;
-    #         proxy_cache_valid 200 60m;
-    #     }
-    #
-    #     location / {
-    #         limit_req zone=general_limit burst=50 nodelay;
-    #         proxy_pass http://frontend_service;
-    #         proxy_set_header Host $host;
-    #         proxy_set_header X-Real-IP $remote_addr;
-    #         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-    #         proxy_set_header X-Forwarded-Proto $scheme;
-    #     }
-    # }
+        location / {
+            limit_req zone=general_limit burst=50 nodelay;
+            proxy_pass http://frontend_service;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+        }
+    }
 }
